# quicksort

./: .gitignore  README.md  quicksort.cabal  stack.yaml
src/: Quicksort.hs
test/: QuicksortSpec.hs  Spec.hs
