name:                quicksort
version:             0.1.0.0
author:              Rikkie
maintainer:          rikvdkleij@gmail.com
cabal-version:       >=1.10
build-type:          Simple

library
  build-depends:         base >=4.6 && <4.7
  exposed-modules:       Quicksort
  ghc-options:           -Wall
  hs-source-dirs:        src

test-suite spec
   type:                exitcode-stdio-1.0
   ghc-options:         -Wall -Werror
   hs-source-dirs:      test, src
   main-is:             QuicksortSpec.hs
   build-depends: 
       base       >= 4.6 && <4.7
     , hspec      == 1.8.1.1
     , QuickCheck