name:                quicksort
version:             0.1.0.0
author:              Rikkie
maintainer:          rikvdkleij@gmail.com
cabal-version:       >=1.10
build-type:          Simple

library
  build-depends:       
       base >= 4.7  && < 4.10 
  exposed-modules:       Quicksort
  ghc-options:           -Wall
  hs-source-dirs:        src
  default-language:      Haskell2010

test-suite spec
   type:                 exitcode-stdio-1.0
   ghc-options:          -Wall -Werror
   hs-source-dirs:       test, src
   main-is:              Spec.hs
   default-language:     Haskell2010
   build-depends: 
       base       
     , hspec      == 2.*
     , QuickCheck
