name:                quicksort
version:             0.1.0.0
author:              Rikkie
maintainer:          rikvdkleij@gmail.com
cabal-version:       >=1.10
build-type:          Simple

library
  build-depends:         base, protolude
  exposed-modules:       Quicksort
  ghc-options:           -Wall
  hs-source-dirs:        src
  default-language:      Haskell2010

test-suite spec
   type:                 exitcode-stdio-1.0
   ghc-options:          -Wall 
   hs-source-dirs:       test
   main-is:              Spec.hs
   default-language:     Haskell2010
   other-modules:        QuicksortSpec
   build-depends: 
       base       
     , hspec      
     , QuickCheck
     , quicksort
